# cs50-final-project

./: .gitignore  CMakeLists.txt  README.md
include/: bmp.h  color_functions.h  fractal_functions.h  range_to_list.h  usage.h  usage_check.h
src/: color_functions.c  fractal_functions.c  main.c  range_to_list.c  usage.c  usage_check.c
